--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,7 +6,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "admin" %>
 
 
 <%= yield %>
